[project]
name = "kktide"
version = "1.1.4"
requires-python = ">= 3.12.2"
description = "Collecting and analyze the TIDE's data"
dependencies = [
    'kkpsgre @ git+https://github.com/kazukingh01/kkpsgre.git@e19504564aab73e61450dcfc4f3d79b40f00235d',
    'pandas==2.2.3',
    'numpy==2.2.1',
    'requests==2.32.3',
    'beautifulsoup4==4.12.3',
    'matplotlib==3.9.4',
    'folium==0.19.5',
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kktide", "kktide.bin", "kktide.util", "kktide.config"]

[tool.setuptools.package-data]
kktide = ["config/schema.sql", "config/ipaexg.ttf"]

[project.scripts]
kktidegenbo     = "kktide.bin.get_genbo:genbo"
kktidegenbomst  = "kktide.bin.get_genbo_mst:genbo_mst"
kktidesuisan    = "kktide.bin.get_suisan:suisan"
kktidesuisanmst = "kktide.bin.get_suisan_mst:suisan_mst"
